saytni navbar va userlar ko'rinadigan qismi qisman tugatildi

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,82 @@
 
     <!-- Css links -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
-    
+
+    <!-- navbar coding -->
+
+    <nav>
+        <div class="top">
+            <img src="assets/imgs/mastercard-line.png" class="logo" alt="">
+            <img src="assets/imgs/user.jpg" class="user" alt="">
+            <img src="assets/imgs/line.png" alt="">
+        </div>
+
+        <div class="center">
+            <button>
+                <img src="assets/imgs/chat.png" alt="">
+            </button>
+        </div>
+
+        <div class="bottom">
+            <button>
+                <img src="/assets/imgs/settings.png" alt="">
+            </button>
+            <button>
+                <img src="/assets/imgs/logout.png" alt="">
+            </button>
+        </div>
+    </nav>
+
+    <!-- navbar coding end -->
+
+    <!-- Messages panel -->
+
+    <div class="messages">
+        <div class="top">
+            <h2>Messages</h2>
+            <div class="search">
+                <div class="left">
+                    <img src="assets/imgs/search.png" alt="">
+                </div>
+                <div class="right">
+                    <input type="text" placeholder="Search">
+                </div>
+            </div>
+        </div>
+        <div class="bottom">
+            <div class="user">
+                <div class="left">
+                    <img src="/assets/imgs/user.jpg" class="user-img" alt="">
+                    <img src="/assets/imgs/online.png" class="online" alt="">
+                </div>
+                <div class="center">
+                    <p><b>John Doe</b></p>
+                    <p class="text">How are you doing?</p>
+                </div>
+                <div class="right">
+                    <p>16:45</p>
+                    <img src="/assets/imgs/doubletick.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Messages panel end -->
+
+    <!-- Chat coding  -->
+
+    <div class="chat"></div>
+
+    <!-- Chat coding end -->
 </body>
+
 </html>
