saytda userlarning har xil holatlari qilindi. Saytga birinchi kirgandagi holat yakunlandi

--- a/index.html
+++ b/index.html
@@ -60,14 +60,185 @@
             </div>
         </div>
         <div class="bottom">
-            <div class="user">
+
+            <!-- pinned user -->
+
+            <div class="pin user">
                 <div class="left">
                     <img src="/assets/imgs/user.jpg" class="user-img" alt="">
                     <img src="/assets/imgs/online.png" class="online" alt="">
                 </div>
                 <div class="center">
-                    <p><b>John Doe</b></p>
+                    <p class="name"><img src="/assets/imgs/pin.png" alt=""><b>John Doe</b></p>
                     <p class="text">How are you doing?</p>
+                </div>
+                <div class="right">
+                    <p>16:45</p>
+                    <img src="/assets/imgs/doubletick.png" alt="">
+                </div>
+            </div>
+
+            <!-- typing user -->
+
+            <div class="typing user">
+                <div class="left">
+                    <img src="/assets/imgs/travis.png" class="user-img" alt="">
+                    <img src="/assets/imgs/online.png" class="online" alt="">
+                </div>
+                <div class="center">
+                    <p class="name"><b>Travis Barker</b></p>
+                    <p class="typing">... typing</p>
+                </div>
+                <div class="right">
+                    <p>16:45</p>
+                </div>
+            </div>
+
+            <!-- you messaged user -->
+
+            <div class="you-messaged user">
+                <div class="left">
+                    <img src="/assets/imgs/kate.png" class="user-img" alt="">
+                    <img src="/assets/imgs/online.png" class="online" alt="">
+                </div>
+                <div class="center">
+                    <p class="name"><b>Kate Rose</b></p>
+                    <p class="text">you: See you tomorrow!</p>
+                </div>
+                <div class="right">
+                    <p>16:45</p>
+                    <img src="/assets/imgs/tick.png" alt="">
+                </div>
+            </div>
+
+            <!-- new messaged user -->
+
+            <div class="new-messaged user">
+                <div class="left">
+                    <img src="/assets/imgs/robert.png" class="user-img" alt="">
+                    <img src="/assets/imgs/online.png" class="online" alt="">
+                </div>
+                <div class="center">
+                    <p class="name"><b>Robert Parker</b></p>
+                    <p class="new-message text">Awesome!</p>
+                </div>
+                <div class="right">
+                    <p>16:45</p>
+                    <p class="new-message">2</p>
+                </div>
+            </div>
+
+            <!-- default user -->
+
+            <div class="default user">
+                <div class="left">
+                    <img src="/assets/imgs/rick.png" class="user-img" alt="">
+                    <img src="/assets/imgs/online.png" class="online" alt="">
+                </div>
+                <div class="center">
+                    <p class="name"><b>Rick Owens</b></p>
+                    <p class="text">Good idea 🤩</p>
+                </div>
+                <div class="right">
+                    <p>16:45</p>
+                </div>
+            </div>
+
+            <!-- you messaged user -->
+
+            <div class="you-messaged user">
+                <div class="left">
+                    <img src="/assets/imgs/george.png" class="user-img" alt="">
+                    <img src="/assets/imgs/online.png" class="online" alt="">
+                </div>
+                <div class="center">
+                    <p class="name"><b>George Orwell</b></p>
+                    <p class="text">you: Literally 1984 🤨</p>
+                </div>
+                <div class="right">
+                    <p>16:45</p>
+                    <img src="/assets/imgs/tick.png" alt="">
+                </div>
+            </div>
+
+            <!-- double tick user -->
+
+            <div class="double-tick user">
+                <div class="left">
+                    <img src="/assets/imgs/franz.png" class="user-img" alt="">
+                    <img src="/assets/imgs/online.png" class="online" alt="">
+                </div>
+                <div class="center">
+                    <p class="name"><b>Franz Kafka</b></p>
+                    <p class="text">Are you interested in insectitides for..</p>
+                </div>
+                <div class="right">
+                    <p>16:45</p>
+                    <img src="/assets/imgs/doubletick.png" alt="">
+                </div>
+            </div>
+
+            <!-- double tick user -->
+
+            <div class="double-tick user">
+                <div class="left">
+                    <img src="/assets/imgs/tom.png" class="user-img" alt="">
+                    <img src="/assets/imgs/online.png" class="online" alt="">
+                </div>
+                <div class="center">
+                    <p class="name"><b>Tom Hardy</b></p>
+                    <p class="text">Smells like design spirit..</p>
+                </div>
+                <div class="right">
+                    <p>16:45</p>
+                    <img src="/assets/imgs/doubletick.png" alt="">
+                </div>
+            </div>
+
+            <!-- double tick user -->
+
+            <div class="double-tick user">
+                <div class="left">
+                    <img src="/assets/imgs/vivi.png" class="user-img" alt="">
+                    <img src="/assets/imgs/online.png" class="online" alt="">
+                </div>
+                <div class="center">
+                    <p class="name"><b>Vivienne Westwood</b></p>
+                    <p class="text">This cat is so funny 😸</p>
+                </div>
+                <div class="right">
+                    <p>16:45</p>
+                    <img src="/assets/imgs/doubletick.png" alt="">
+                </div>
+            </div>
+
+            <!-- double tick user -->
+
+            <div class="double-tick user">
+                <div class="left">
+                    <img src="/assets/imgs/anthony.png" class="user-img" alt="">
+                    <img src="/assets/imgs/online.png" class="online" alt="">
+                </div>
+                <div class="center">
+                    <p class="name"><b>Anthony Paul</b></p>
+                    <p class="text">Check out my page 🤩</p>
+                </div>
+                <div class="right">
+                    <p>16:45</p>
+                    <img src="/assets/imgs/doubletick.png" alt="">
+                </div>
+            </div> 
+            
+            <!-- double tick user -->
+
+            <div class="double-tick user">
+                <div class="left">
+                    <img src="/assets/imgs/anthony.png" class="user-img" alt="">
+                    <img src="/assets/imgs/online.png" class="online" alt="">
+                </div>
+                <div class="center">
+                    <p class="name"><b>Anthony Paul</b></p>
+                    <p class="text">Check out my page 🤩</p>
                 </div>
                 <div class="right">
                     <p>16:45</p>
@@ -81,7 +252,9 @@
 
     <!-- Chat coding  -->
 
-    <div class="chat"></div>
+    <div class="chat-default">
+        <p>Select a chat to start messaging</p>
+    </div>
 
     <!-- Chat coding end -->
 </body>
