Chat-navbar qismi tugatildi

--- a/index.html
+++ b/index.html
@@ -250,10 +250,32 @@
 
     <!-- Messages panel end -->
 
-    <!-- Chat coding  -->
+    <!-- Chat default coding  -->
 
     <div class="chat-default">
         <p>Select a chat to start messaging</p>
+    </div>
+
+    <!-- Chat default coding end -->
+
+    <!-- Chat coding -->
+
+    <div class="chat">
+        <div class="chat-navbar">
+            <div class="left">
+                <div class="img">
+                    <img src="/assets/imgs/travis.png" class="user-img" alt="">
+                </div>
+                <div class="text">
+                    <p><b>Travis Barker</b></p>
+                    <span>Online</span>
+                </div>
+            </div>
+
+            <div class="right">
+                <img src="/assets/imgs/info.png" alt="">
+            </div>
+        </div>
     </div>
 
     <!-- Chat coding end -->
