yozishmalar bo'limi tugatildi

--- a/index.html
+++ b/index.html
@@ -278,11 +278,159 @@
         </div>
 
         <div class="message" id="messageContainer">
-            <div class="mes right">
+            <div class="xabar right">
                 <p>See you at office tomorrow!</p>
                 <span></span>
             </div>
-            <div class="mes left"></div>
+            <div class="xabar left">
+                <p>ok boss</p>
+                <span></span>
+            </div>
+            <div class="xabar right">
+                <p>See you at office tomorrow!</p>
+                <span></span>
+            </div>
+            <div class="xabar left">
+                <p>ok boss</p>
+                <span></span>
+            </div>
+            <div class="xabar right">
+                <p>See you at office tomorrow!</p>
+                <span></span>
+            </div>
+            <div class="xabar left">
+                <p>ok boss</p>
+                <span></span>
+            </div>
+            <div class="xabar right">
+                <p>See you at office tomorrow!</p>
+                <span></span>
+            </div>
+            <div class="xabar left">
+                <p>ok boss</p>
+                <span></span>
+            </div>
+            <div class="xabar right">
+                <p>See you at office tomorrow!</p>
+                <span></span>
+            </div>
+            <div class="xabar left">
+                <p>ok boss</p>
+                <span></span>
+            </div>
+            <div class="xabar right">
+                <p>See you at office tomorrow!</p>
+                <span></span>
+            </div>
+            <div class="xabar left">
+                <p>ok boss</p>
+                <span></span>
+            </div>
+            <div class="xabar right">
+                <p>See you at office tomorrow!</p>
+                <span></span>
+            </div>
+            <div class="xabar left">
+                <p>ok boss</p>
+                <span></span>
+            </div>
+            <div class="xabar right">
+                <p>See you at office tomorrow!</p>
+                <span></span>
+            </div>
+            <div class="xabar left">
+                <p>ok boss</p>
+                <span></span>
+            </div>
+            <div class="xabar right">
+                <p>See you at office tomorrow!</p>
+                <span></span>
+            </div>
+            <div class="xabar left">
+                <p>ok boss</p>
+                <span></span>
+            </div>
+            <div class="xabar right">
+                <p>See you at office tomorrow!</p>
+                <span></span>
+            </div>
+            <div class="xabar left">
+                <p>ok boss</p>
+                <span></span>
+            </div>
+            <div class="xabar right">
+                <p>See you at office tomorrow!</p>
+                <span></span>
+            </div>
+            <div class="xabar left">
+                <p>ok boss</p>
+                <span></span>
+            </div>
+            <div class="xabar right">
+                <p>See you at office tomorrow!</p>
+                <span></span>
+            </div>
+            <div class="xabar left">
+                <p>ok boss</p>
+                <span></span>
+            </div>
+            <div class="xabar right">
+                <p>See you at office tomorrow!</p>
+                <span></span>
+            </div>
+            <div class="xabar left">
+                <p>ok boss</p>
+                <span></span>
+            </div>
+            <div class="xabar right">
+                <p>See you at office tomorrow!</p>
+                <span></span>
+            </div>
+            <div class="xabar left">
+                <p>ok boss</p>
+                <span></span>
+            </div>
+            <div class="xabar right">
+                <p>See you at office tomorrow!</p>
+                <span></span>
+            </div>
+            <div class="xabar left">
+                <p>ok boss</p>
+                <span></span>
+            </div>
+            <div class="xabar right">
+                <p>See you at office tomorrow!</p>
+                <span></span>
+            </div>
+            <div class="xabar left">
+                <p>ok boss</p>
+                <span></span>
+            </div>
+            <div class="xabar right">
+                <p>See you at office tomorrow!</p>
+                <span></span>
+            </div>
+            <div class="xabar left">
+                <p>ok boss</p>
+                <span></span>
+            </div>
+            <div class="xabar right">
+                <p>See you at office tomorrow!</p>
+                <span></span>
+            </div>
+            <div class="xabar left">
+                <p>ok boss</p>
+                <span></span>
+            </div>
+            <div class="xabar right">
+                <p>See you at office tomorrow!</p>
+                <span></span>
+            </div>
+            <div class="xabar left">
+                <p>ok boss</p>
+                <span></span>
+            </div>
+
         </div>
 
         <div class="sender">
@@ -297,35 +445,9 @@
     <!-- Chat coding end -->
 
 
-    <script>
-        function autoExpand(textarea) {
-            // Set the textarea's height to its scrollHeight
-            textarea.style.height = 'auto';
-            textarea.style.height = (textarea.scrollHeight) + 'px';
-        }
+    <!-- Javascript linklari -->
 
-        // Hozirgi heightni saqlab olish
-        var textarea = document.getElementById('message');
-        var originalHeight = textarea.scrollHeight;
-
-        textarea.addEventListener('input', function () {
-            autoExpand(this);
-
-            // Pastga tushganda orqiginal o'lchamni sozlash
-            if (textarea.scrollHeight > originalHeight) {
-                originalHeight = textarea.scrollHeight;
-            }
-        });
-
-        const bodyHeight = document.querySelector('body').clientHeight;
-        const senderHeight = document.querySelector('.sender').clientHeight;
-        const chatNavbarHeight = document.querySelector('.chat-navbar').clientHeight;
-        const message = document.querySelector('.message');
-
-        message.style.height = `${bodyHeight - (senderHeight + chatNavbarHeight)}px`;
-
-        console.log(senderHeight);
-    </script>
+    <script src="assets/js/script.js"></script>
 
 </body>
 
