user info bo'limi boshlandi

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
 
+    <!-- favicon -->
+    <link rel="shortcut icon" href="/assets/imgs/mastercard-line.png" type="image/x-icon">
+
     <!-- Css links -->
     <link rel="stylesheet" href="style.css">
 
@@ -439,6 +442,22 @@
                 <textarea name="" id="message" placeholder="Type your message here.."></textarea>
                 <button type="submit">Send message</button>
             </form>
+        </div>
+    </div>
+
+    <div class="user-infos">
+        <div class="top">
+            <p>User info</p>
+            <img src="/assets/imgs/cancel-close-svgrepo-com.svg" alt="">
+        </div>
+        <div class="user-profile">
+            <div class="left">
+                <img src="/assets/imgs/user.jpg" alt="">
+            </div>
+            <div class="right">
+                <p><b>Travis Barker</b></p>
+                <span>Online</span>
+            </div>
         </div>
     </div>
 
