user info bo'limi tugatildi

--- a/index.html
+++ b/index.html
@@ -459,6 +459,27 @@
                 <span>Online</span>
             </div>
         </div>
+
+        <div class="infos">
+            <div class="info">
+                <div class="left">
+                    <img src="/assets/imgs/profile-1335-svgrepo-com.svg" title="Bio" alt="">
+                </div>
+                <div class="right">
+                    <p>18 years old developer from Uzbekistan. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, illo.</p>
+                    <span>Bio</span>
+                </div>
+            </div>
+            <div class="info username">
+                <div class="left">
+                    <img src="/assets/imgs/username-svgrepo-com.svg" title="Username" alt="">
+                </div>
+                <div class="right">
+                    <p>@aziziy</p>
+                    <span>Username</span>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Chat coding end -->
