--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
                 </div>
                 <div class="right">
                     <p><b>Travis Barker</b></p>
-                    <span>azizbekgulomovweb@gmail.com</span>
                     <span>@utopian</span>
                 </div>
             </div>  
             <hr>    
             <ul>
-                <li>
+                <li onclick="EditProfile('open')">
                     <img src="/assets/imgs/profile-1335-svgrepo-com.svg" width="18" alt="">
                     <p>Account Settings</p>
                 </li>
                 <li>
                     <img src="/assets/imgs/chat-round-line-svgrepo-com.svg" width="18" alt="">
                     <p>Chat Settings</p>
+                    <img src="" alt="">
                 </li>
                 <li>
                     <img src="/assets/imgs/language-outline-svgrepo-com.svg" width="18" alt="">
@@ -69,6 +69,47 @@
     </div>
 
     <!-- settings coding end -->
+
+    <!-- profile edit -->
+
+    <div class="profile-edit">
+        <div class="container">
+            <div class="top">
+                <img src="/assets/imgs/arrow-back-svgrepo-com.svg" width="20" alt="" onclick="EditProfile('back')">
+                <p>Info</p>
+                <img src="/assets/imgs/cancel-close-svgrepo-com.svg" onclick="EditProfile('close')" alt="">
+            </div>
+            <div class="img">
+                <form action="">
+                    <label for="fileInput" class="file-label">
+                        <input type="file" name="fileInput" id="fileInput" class="file" accept="image/*">
+                        <div class="pro-img">
+                            <img src="/assets/imgs/user.jpg" alt="" id="profileImage">
+                            <div class="camera">
+                                <img src="/assets/imgs/camera-svgrepo-com.svg" width="20" alt="">
+                            </div>
+                        </div>
+                    </label>
+                    <div class="infos">
+                        <label for="name">Name
+                            <input type="text" id="name">
+                        </label>
+
+                        <label for="username">Username
+                            <input type="text" id="username">
+                        </label>
+
+                        <label for="bio">Bio
+                            <textarea name="" id="" rows="5"></textarea>
+                        </label>
+                        <button type="submit" onclick="EditProfile('close')">Save</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- profile edit end -->
 
     <!-- logout coding -->
 
@@ -555,6 +596,46 @@
     <!-- Javascript linklari -->
 
     <script src="assets/js/script.js"></script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const fileInput = document.getElementById('fileInput');
+            const profileImage = document.getElementById('profileImage');
+
+            fileInput.addEventListener('change', function () {
+                const file = this.files[0];
+
+                if (file) {
+                    const reader = new FileReader();
+
+                    reader.onload = function (e) {
+                        profileImage.src = e.target.result;
+                    };
+
+                    reader.readAsDataURL(file);
+                }
+            });
+        });
+
+        // profile edit open
+
+        document.addEventListener('DOMContentLoaded', function () {
+            const profile_edit_x = document.querySelector(".profil-edit-x");
+            const profil_edit = document.querySelector(".profile-edit");
+            const edit = document.querySelector(".edit");
+
+            profile_edit_x.addEventListener("click", function () {
+                profil_edit.style.display = "none";
+            });
+
+            edit.addEventListener("click", function (event) {
+                event.preventDefault(); 
+                profil_edit.style.display = "flex";
+            });
+        });
+
+
+    </script>
 
 </body>
 
