--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <!-- Css links -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/assets/responsive/style.css">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,7 +46,7 @@
                     <img src="/assets/imgs/profile-1335-svgrepo-com.svg" width="18" alt="">
                     <p>Account Settings</p>
                 </li>
-                <li>
+                <li class="theme-toggle-button">
                     <img src="/assets/imgs/chat-round-line-svgrepo-com.svg" width="18" alt="">
                     <p>Chat Settings</p>
                     <img src="" alt="">
@@ -160,9 +161,7 @@
         </div>
 
         <div class="center">
-            <button>
-                <img src="assets/imgs/chat.png" alt="">
-            </button>
+
         </div>
 
         <div class="bottom">
