--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
             <!-- pinned user -->
 
-            <div class="pin user">
+            <div class="user pin" id="user-card">
                 <div class="left">
                     <img src="/assets/imgs/user.jpg" class="user-img" alt="">
                     <img src="/assets/imgs/online.png" class="online" alt="">
@@ -80,7 +80,7 @@
 
             <!-- typing user -->
 
-            <div class="typing user">
+            <div class="typing user" id="user-card">
                 <div class="left">
                     <img src="/assets/imgs/travis.png" class="user-img" alt="">
                     <img src="/assets/imgs/online.png" class="online" alt="">
@@ -96,7 +96,7 @@
 
             <!-- you messaged user -->
 
-            <div class="you-messaged user">
+            <div class="you-messaged user" id="user-card">
                 <div class="left">
                     <img src="/assets/imgs/kate.png" class="user-img" alt="">
                     <img src="/assets/imgs/online.png" class="online" alt="">
@@ -113,7 +113,7 @@
 
             <!-- new messaged user -->
 
-            <div class="new-messaged user">
+            <div class="new-messaged user" id="user-card">
                 <div class="left">
                     <img src="/assets/imgs/robert.png" class="user-img" alt="">
                     <img src="/assets/imgs/online.png" class="online" alt="">
@@ -130,7 +130,7 @@
 
             <!-- default user -->
 
-            <div class="default user">
+            <div class="default user" id="user-card">
                 <div class="left">
                     <img src="/assets/imgs/rick.png" class="user-img" alt="">
                     <img src="/assets/imgs/online.png" class="online" alt="">
@@ -146,7 +146,7 @@
 
             <!-- you messaged user -->
 
-            <div class="you-messaged user">
+            <div class="you-messaged user" id="user-card">
                 <div class="left">
                     <img src="/assets/imgs/george.png" class="user-img" alt="">
                     <img src="/assets/imgs/online.png" class="online" alt="">
@@ -163,7 +163,7 @@
 
             <!-- double tick user -->
 
-            <div class="double-tick user">
+            <div class="double-tick user" id="user-card">
                 <div class="left">
                     <img src="/assets/imgs/franz.png" class="user-img" alt="">
                     <img src="/assets/imgs/online.png" class="online" alt="">
@@ -180,7 +180,7 @@
 
             <!-- double tick user -->
 
-            <div class="double-tick user">
+            <div class="double-tick user" id="user-card">
                 <div class="left">
                     <img src="/assets/imgs/tom.png" class="user-img" alt="">
                     <img src="/assets/imgs/online.png" class="online" alt="">
@@ -197,7 +197,7 @@
 
             <!-- double tick user -->
 
-            <div class="double-tick user">
+            <div class="double-tick user" id="user-card">
                 <div class="left">
                     <img src="/assets/imgs/vivi.png" class="user-img" alt="">
                     <img src="/assets/imgs/online.png" class="online" alt="">
@@ -214,7 +214,7 @@
 
             <!-- double tick user -->
 
-            <div class="double-tick user">
+            <div class="double-tick user" id="user-card">
                 <div class="left">
                     <img src="/assets/imgs/anthony.png" class="user-img" alt="">
                     <img src="/assets/imgs/online.png" class="online" alt="">
@@ -231,7 +231,7 @@
 
             <!-- double tick user -->
 
-            <div class="double-tick user">
+            <div class="double-tick user" id="user-card">
                 <div class="left">
                     <img src="/assets/imgs/anthony.png" class="user-img" alt="">
                     <img src="/assets/imgs/online.png" class="online" alt="">
